--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
    Email.send({
         Host : "smtp.gmail.com",
-        Username : "Rohitsurage@gmail.com",
-        password : "Rohit123@",
-        To : 'Way2buyonline0@gmail.com',
-        From : "Rohitsurage@gmail.com",
+        Username : "way2buyonline0@gmail.com",
+        password : "Hariradha@1",
+        To : 'rohitsurage@gmail.com',
+        From : "way2buyonline0@gmail.com",
         Subject : "New Mail from Contect Form From:"+name,
-        Body : Body
+        Body : "Body"
         }) .then(
         message =>{
 
