--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         To : 'rohitsurage@gmail.com',
         From : "way2buyonline0@gmail.com",
         Subject : "New Mail from Contect Form From:"+name,
-        Body : "Body"
+        Body : Body
         }) .then(
         message =>{
 
@@ -93,18 +93,6 @@
         }
       );
 
-
-			
-/*Email.send({
-    SecureToken : "008374bf-98c3-45dd-b1dd-1bd337a1e389",
-    To : 'rohitsurage@gmail.com',
-    From : "way2buyonline0@gmail.com",
-    Subject : "This is the subject",
-    Body : "Body"
-}).then(
-  message => alert(message)
-);
-*/
  </script>
 
 </body>
